--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   },
